--- a/biostuff/dune
+++ b/biostuff/dune
@@ -1,10 +1,7 @@
-(jbuild_version 1)
-
 (library
- ((name labs_biostuff)
-  (public_name labs.biostuff)
-  (libraries (biocaml.base biocaml.unix core pipes.unix))
-  (inline_tests)
-  (flags (:standard -unsafe-string))
-  (preprocess (pps (ppx_compare ppx_fields_conv ppx_csv_conv ppx_inline_test ppx_sexp_conv)))
-))
+ (name labs_biostuff)
+ (public_name labs.biostuff)
+ (libraries biocaml.base biocaml.unix core pipes.unix)
+ (inline_tests)
+ (flags :standard -unsafe-string)
+ (preprocess (pps ppx_compare ppx_fields_conv ppx_csv_conv ppx_inline_test ppx_sexp_conv)))
