--- a/biopipes/dune
+++ b/biopipes/dune
@@ -1,4 +1,4 @@
 (library
  (name labs_biopipes)
  (public_name labs.biopipes)
- (libraries biocaml.base labs.biostuff pipes.parsers pipes.unix))
+ (libraries biocaml.base gzt pipes.parsers pipes.unix))
